criando rede social

--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../../styles/globalStyles.css" />
-    <link rel="stylesheet" href="../../styles/style.css" />
-    <link rel="stylesheet" href="../../styles/menu.css" />
-    <link rel="stylesheet" href="../../styles/inputs.css" />
-    <link rel="stylesheet" href="../../styles/modal.css">
-    <link rel="stylesheet" href="../../styles/buttons.css">
-    <link rel="stylesheet" href="../../styles/mobile.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/globalStyles.css" />
+    <link rel="stylesheet" href="./styles/menu.css" />
+    <link rel="stylesheet" href="./styles/inputs.css" />
+    <link rel="stylesheet" href="./styles/modal.css">
+    <link rel="stylesheet" href="./styles/buttons.css">
+    <link rel="stylesheet" href="./styles/mobile.css">
+    <link rel="stylesheet" href="./pages/home/style.css">
     <title>TechPosters - Rede Social</title>
   </head>
   <body>
@@ -32,7 +31,7 @@
           <ul>
             <li>
               <div class="user">
-                <img src="../../assets/img/user1.svg" alt="">
+                <img src="./assets/img/user1.svg" alt="">
                 <span>
                   <h4 class="name font_size20px color_text">Samuel Leão</h4>
                   <p class="craft color_text">Front end Engineer</p>
@@ -51,7 +50,7 @@
           <ul>
             <li class="container_suggestions">
               <span class="user">
-                <img src="../../assets/img/user3.svg" alt="">
+                <img src="./assets/img/user3.svg" alt="">
                 <span>
                   <h4 class="name font_size20px color_text">Carlos Lima</h4>
                   <p class="craft color_text">UX e UI Desginer</p>
@@ -61,7 +60,7 @@
             </li>
             <li class="container_suggestions">
               <span class="user">
-                <img src="../../assets/img/user6.svg" alt="">
+                <img src="./assets/img/user6.svg" alt="">
                 <span>
                   <h4 class="name font_size20px color_text">Larissa Camargo</h4>
                   <p class="craft color_text">UI Developer</p>
@@ -71,7 +70,7 @@
             </li>
             <li class="container_suggestions">
               <span class="user">
-                <img src="../../assets/img/user7.svg" alt="">
+                <img src="./assets/img/user7.svg" alt="">
                 <span>
                   <h4 class="name font_size20px color_text">Filipe Gutierry</h4>
                   <p class="craft color_text">Full Stack Developer</p>
@@ -86,7 +85,7 @@
         <ul class="container_posts">
           <li>
             <span class="user">
-              <img src="../../assets/img/user1.svg" alt="">
+              <img src="./assets/img/user1.svg" alt="">
               <span>
                 <h4 class="name font_size20px color_text">Samuel Leão</h4>
                 <p class="craft color_text">Front end Engineer</p>
@@ -100,7 +99,7 @@
           </li>
           <li>
             <span class="user">
-              <img src="../../assets/img/user2.svg" alt="">
+              <img src="./assets/img/user2.svg" alt="">
               <span>
                 <h4 class="name font_size20px color_text">Samuel Persuhn</h4>
                 <p class="craft color_text">Front end Engineer</p>
@@ -114,7 +113,7 @@
           </li>
           <li>
             <span class="user">
-              <img src="../../assets/img/user4.svg" alt="">
+              <img src="./assets/img/user4.svg" alt="">
               <span>
                 <h4 class="name font_size20px color_text">Carla Maria</h4>
                 <p class="craft color_text">Back end Engineer</p>
@@ -128,7 +127,7 @@
           </li>
           <li>
             <span class="user">
-              <img src="../../assets/img/user5.svg" alt="">
+              <img src="./assets/img/user5.svg" alt="">
               <span>
                 <h4 class="name font_size20px color_text">Júlia Martins</h4>
                 <p class="craft color_text">Devop's</p>
@@ -148,7 +147,7 @@
         <ul>
           <li class="container_suggestions">
             <span class="user">
-              <img src="../../assets/img/user3.svg" alt="">
+              <img src="./assets/img/user3.svg" alt="">
               <span>
                 <h4 class="name font_size20px color_text">Carlos Lima</h4>
                 <p class="craft color_text">UX e UI Desginer</p>
@@ -158,7 +157,7 @@
           </li>
           <li class="container_suggestions">
             <span class="user">
-              <img src="../../assets/img/user6.svg" alt="">
+              <img src="./assets/img/user6.svg" alt="">
               <span>
                 <h4 class="name font_size20px color_text">Larissa Camargo</h4>
                 <p class="craft color_text">UI Developer</p>
@@ -168,7 +167,7 @@
           </li>
           <li class="container_suggestions">
             <span class="user">
-              <img src="../../assets/img/user7.svg" alt="">
+              <img src="./assets/img/user7.svg" alt="">
               <span>
                 <h4 class="name font_size20px color_text">Filipe Gutierry</h4>
                 <p class="craft color_text">Full Stack Developer</p>
@@ -185,7 +184,7 @@
       <article class="container_modal">
         <div class="box_user_remove">
           <span class="user">
-            <img src="../../assets/img/user1.svg" alt="">
+            <img src="./assets/img/user1.svg" alt="">
             <span>
               <h4 class="name color_text">Samuel Leão</h4>
               <p class="craft color_text">Front end Engineer</p>
@@ -207,7 +206,7 @@
       <article class="container_modal">
         <div class="box_user_remove">
           <span class="user">
-            <img src="../../assets/img/user2.svg" alt="">
+            <img src="./assets/img/user2.svg" alt="">
             <span>
               <h4 class="name font_size20px color_text">Samuel Persuhn</h4>
               <p class="craft color_text">Front end Engineer</p>
@@ -263,7 +262,7 @@
         <article class="container_modal">
           <div class="box_user_remove">
             <span class="user">
-              <img src="../../assets/img/user5.svg" alt="">
+              <img src="./assets/img/user5.svg" alt="">
               <span>
                 <h4 class="name font_size20px color_text">Júlia Martins</h4>
                 <p class="craft color_text">Devop's</p>
@@ -281,8 +280,5 @@
         </article>
       </div>
   </body>
-  <script src="../../script/database/users.js"></script>
-  <script src="../../script/database/posts.js"></script>
-  <script src="../../script/database/sugestUsers.js"></script>
-  <script src="./index.js"></script>
+  <script src="./pages/home/index.js"></script>
 </html>
